fixing accelerometer text alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,4 +43,5 @@ p {
   position: fixed;
   bottom: 0;
   right: 0;
+  text-align: right;
 }
